# Lattice

./: .gitignore  CMakeLists.txt  README.md
examples/: project.yaml  test.yaml  toolchain.yaml
modules/: Lattice.cppm  Project.cppm  Provider.cppm  Registry.cppm  Toolchain.cppm
modules/Artifacts/: Artifact.cppm  CompiledObject.cppm
modules/Object/: Buildable.cppm  ILibrary.cppm  Library.cppm  Object.cppm  Parsable.cppm  Project.cppm  Provider.cppm  Toolchain.cppm
modules/Object/Properties/: Buildable.cppm  LanguageIdentifiable.cppm  Linkable.cppm
modules/Plugin/: IFactory.cppm
modules/System/: Command.cppm  Process.cppm
modules/Tooling/: Compiler.cppm  Configuration.cppm  ICompiler.cppm  ILinker.cppm
src/: CMakeLists.txt  Lattice.cpp  Project.cpp  Toolchain.cpp  main.cpp
src/Artifacts/: CMakeLists.txt  CompiledObject.cpp
src/Object/: Buildable.cpp  CMakeLists.txt  ILibrary.cpp  Library.cpp  Object.cpp  Parsable.cpp  Project.cpp  Provider.cpp  Toolchain.cpp
src/Object/Properties/: Buildable.cpp  CMakeLists.txt  Linkable.cpp
src/Plugin/: CMakeLists.txt
src/System/: CMakeLists.txt  Command.cpp  Process.cpp
src/Tooling/: CMakeLists.txt  Compiler.cpp  Configuration.cpp  ILinker.cpp
